{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "773e54f6-2406-eed7-6265-74790daffb09",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ac0b140f63d3458",
            "arn": "arn:aws:ec2:us-east-1:104896499701:instance/i-0d45213149e567848",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d45213149e567848",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "deployment-template-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042b225dbb09f15b9",
            "private_dns": "ip-10-0-10-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "prd",
                  "ManagedBy": "terraform",
                  "Project": "deployment-template"
                },
                "tags_all": {
                  "Environment": "prd",
                  "ManagedBy": "terraform",
                  "Project": "deployment-template"
                },
                "throughput": 0,
                "volume_id": "vol-05bc4aa028162d0ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019bf4284354ca9ce",
            "tags": {
              "Name": "deployment-template-prd-backend"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-backend",
              "Project": "deployment-template"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e107daf976d5ac2b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.backend.aws_security_group.alb",
            "module.backend.aws_security_group.ec2",
            "module.backend.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:loadbalancer/app/deployment-template-prd-alb/434d9576ae3b45c2",
            "arn_suffix": "app/deployment-template-prd-alb/434d9576ae3b45c2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "deployment-template-prd-alb-1630425216.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:104896499701:loadbalancer/app/deployment-template-prd-alb/434d9576ae3b45c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "deployment-template-prd-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08cdedce319ece4b1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029021fd9b06a8d1b"
              },
              {
                "subnet_id": "subnet-0a825d0a891f14baa"
              }
            ],
            "subnets": [
              "subnet-029021fd9b06a8d1b",
              "subnet-0a825d0a891f14baa"
            ],
            "tags": {
              "Name": "deployment-template-prd-alb"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-alb",
              "Project": "deployment-template"
            },
            "vpc_id": "vpc-077af5e05e80e1de0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.backend.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:listener/app/deployment-template-prd-alb/434d9576ae3b45c2/8aeba05f149e927f",
            "certificate_arn": "arn:aws:acm:us-east-1:104896499701:certificate/20cb6bbd-3044-4a68-b077-7faee1886d31",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:targetgroup/deployment-template-prd-tg/b8520577cb52c464",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104896499701:listener/app/deployment-template-prd-alb/434d9576ae3b45c2/8aeba05f149e927f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:loadbalancer/app/deployment-template-prd-alb/434d9576ae3b45c2",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Project": "deployment-template"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.backend.aws_acm_certificate.backend",
            "module.backend.aws_acm_certificate_validation.backend",
            "module.backend.aws_lb.main",
            "module.backend.aws_lb_target_group.main",
            "module.backend.aws_route53_record.backend_validation",
            "module.backend.aws_security_group.alb",
            "module.backend.data.aws_route53_zone.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:listener/app/deployment-template-prd-alb/434d9576ae3b45c2/339207b1005f090d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104896499701:listener/app/deployment-template-prd-alb/434d9576ae3b45c2/339207b1005f090d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:loadbalancer/app/deployment-template-prd-alb/434d9576ae3b45c2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Project": "deployment-template"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.backend.aws_lb.main",
            "module.backend.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:targetgroup/deployment-template-prd-tg/b8520577cb52c464",
            "arn_suffix": "targetgroup/deployment-template-prd-tg/b8520577cb52c464",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:104896499701:targetgroup/deployment-template-prd-tg/b8520577cb52c464",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "deployment-template-prd-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "deployment-template-prd-tg"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-tg",
              "Project": "deployment-template"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:104896499701:targetgroup/deployment-template-prd-tg/b8520577cb52c464-20250728204120753900000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:104896499701:targetgroup/deployment-template-prd-tg/b8520577cb52c464",
            "target_id": "i-0d45213149e567848"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.backend.aws_instance.main",
            "module.backend.aws_lb_target_group.main",
            "module.backend.aws_security_group.alb",
            "module.backend.aws_security_group.ec2",
            "module.backend.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:security-group/sg-08cdedce319ece4b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cdedce319ece4b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "deployment-template-prd-alb-20250728204056969300000003",
            "name_prefix": "deployment-template-prd-alb-",
            "owner_id": "104896499701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deployment-template-prd-alb-sg"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-alb-sg",
              "Project": "deployment-template"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:security-group/sg-0e107daf976d5ac2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e107daf976d5ac2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08cdedce319ece4b1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "deployment-template-prd-ec2-20250728204101812000000005",
            "name_prefix": "deployment-template-prd-ec2-",
            "owner_id": "104896499701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deployment-template-prd-ec2-sg"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-ec2-sg",
              "Project": "deployment-template"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a54fff279478d19",
            "arn": "arn:aws:ec2:us-east-1:104896499701:elastic-ip/eipalloc-05a54fff279478d19",
            "domain": "vpc",
            "id": "eipalloc-05a54fff279478d19",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-249-74.compute-1.amazonaws.com",
            "public_ip": "23.23.249.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deployment-template-prd-nat-eip-1"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-nat-eip-1",
              "Project": "deployment-template"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca27f7885f6e9e09",
            "arn": "arn:aws:ec2:us-east-1:104896499701:elastic-ip/eipalloc-0ca27f7885f6e9e09",
            "domain": "vpc",
            "id": "eipalloc-0ca27f7885f6e9e09",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-221-127.compute-1.amazonaws.com",
            "public_ip": "3.229.221.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deployment-template-prd-nat-eip-2"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-nat-eip-2",
              "Project": "deployment-template"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:internet-gateway/igw-0dff17398fe35398c",
            "id": "igw-0dff17398fe35398c",
            "owner_id": "104896499701",
            "tags": {
              "Name": "deployment-template-prd-igw"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-igw",
              "Project": "deployment-template"
            },
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a54fff279478d19",
            "association_id": "eipassoc-052290c723cf32ee1",
            "connectivity_type": "public",
            "id": "nat-0b465440dec624f4c",
            "network_interface_id": "eni-095690787ae1d4cf8",
            "private_ip": "10.0.0.158",
            "public_ip": "23.23.249.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029021fd9b06a8d1b",
            "tags": {
              "Name": "deployment-template-prd-nat-1"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-nat-1",
              "Project": "deployment-template"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca27f7885f6e9e09",
            "association_id": "eipassoc-0fc52b70f169b7970",
            "connectivity_type": "public",
            "id": "nat-0f4c6be568bfbf488",
            "network_interface_id": "eni-00eced843827b5ac7",
            "private_ip": "10.0.1.66",
            "public_ip": "3.229.221.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a825d0a891f14baa",
            "tags": {
              "Name": "deployment-template-prd-nat-2"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-nat-2",
              "Project": "deployment-template"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:route-table/rtb-09e6883a282b48e68",
            "id": "rtb-09e6883a282b48e68",
            "owner_id": "104896499701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b465440dec624f4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deployment-template-prd-private-rt-1"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-private-rt-1",
              "Project": "deployment-template"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:route-table/rtb-0bb60a8b07f048401",
            "id": "rtb-0bb60a8b07f048401",
            "owner_id": "104896499701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4c6be568bfbf488",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deployment-template-prd-private-rt-2"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-private-rt-2",
              "Project": "deployment-template"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:route-table/rtb-005f9597fa964e57f",
            "id": "rtb-005f9597fa964e57f",
            "owner_id": "104896499701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dff17398fe35398c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deployment-template-prd-public-rt"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-public-rt",
              "Project": "deployment-template"
            },
            "timeouts": null,
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bb88a56600ee0cd",
            "route_table_id": "rtb-09e6883a282b48e68",
            "subnet_id": "subnet-019bf4284354ca9ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0538186781dab65e4",
            "route_table_id": "rtb-0bb60a8b07f048401",
            "subnet_id": "subnet-0e60c565c0a5eb7a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046951a60d0ac5da3",
            "route_table_id": "rtb-005f9597fa964e57f",
            "subnet_id": "subnet-029021fd9b06a8d1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02747e7a9493e80ff",
            "route_table_id": "rtb-005f9597fa964e57f",
            "subnet_id": "subnet-0a825d0a891f14baa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:subnet/subnet-019bf4284354ca9ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019bf4284354ca9ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104896499701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deployment-template-prd-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-private-1",
              "Project": "deployment-template",
              "Type": "private"
            },
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:subnet/subnet-0e60c565c0a5eb7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60c565c0a5eb7a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104896499701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deployment-template-prd-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-private-2",
              "Project": "deployment-template",
              "Type": "private"
            },
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:subnet/subnet-029021fd9b06a8d1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029021fd9b06a8d1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104896499701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deployment-template-prd-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-public-1",
              "Project": "deployment-template",
              "Type": "public"
            },
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:subnet/subnet-0a825d0a891f14baa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a825d0a891f14baa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104896499701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deployment-template-prd-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-public-2",
              "Project": "deployment-template",
              "Type": "public"
            },
            "vpc_id": "vpc-077af5e05e80e1de0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104896499701:vpc/vpc-077af5e05e80e1de0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9ba68a615b45321",
            "default_route_table_id": "rtb-054bf09031d6fb6fa",
            "default_security_group_id": "sg-073c9c2781605ea10",
            "dhcp_options_id": "dopt-9735d6ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077af5e05e80e1de0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054bf09031d6fb6fa",
            "owner_id": "104896499701",
            "tags": {
              "Name": "deployment-template-prd-vpc"
            },
            "tags_all": {
              "Environment": "prd",
              "ManagedBy": "terraform",
              "Name": "deployment-template-prd-vpc",
              "Project": "deployment-template"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}